wip note list and new note

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,9 +40,12 @@ body {
   }
 }
 
-input {
+input,
+select,
+textarea {
   // hide Spinner in Input Number for firefox
   appearance: textfield;
+  font-family: $font-family;
 }
 
 input:-webkit-autofill,
@@ -54,6 +57,7 @@ textarea:-webkit-autofill:focus,
 select:-webkit-autofill,
 select:-webkit-autofill:hover,
 select:-webkit-autofill:focus {
+  font-family: $font-family;
   transition: background-color 5000s ease-in-out 0s; // avoid webkit-autofill browser background color
 }
 
@@ -61,6 +65,7 @@ input::-webkit-inner-spin-button,
 input::-webkit-outer-spin-button {
   // hide Spinner in Input Number for every browser except firefox
   appearance: none;
+  font-family: $font-family;
   margin: 0;
 }
 
