--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,18 +2,11 @@
 $assets-image-url: "/assets/";
 
 // Font Family
-$font-path: "/fonts/Inter";
-$font-family: 'Inter', sans-serif;
+$font-family: 'Playfair Display', serif;
 
 // Colors
 $brand-color: #E91E63;
 $brand-secondary-color: #12e7d9;
-$error: #f9423a;
-$warning: #ffbf00;
-$info: #0089ff;
-$success: #89ce23;
-
-$crayola: #04FCD8;
 
 // Black, White and Grey Scale
 $white: #fff;
