wip add edit and about page and home navigation

--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -64,8 +64,12 @@
     }
   }
 
+  .icon {
+    height: 2rem;
+    width: 2rem;
+  }
+
   &.onClick {
-    font-style: italic;
     opacity: .4;
     transition: all .3s ease-in-out;
 
