--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $font-family: 'Playfair Display', serif;
 // Colors
 $brand-color: #E91E63;
 $brand-secondary-color: #12e7d9;
+$selected-color: #f8d4ba;
 
 // Black, White and Grey Scale
 $white: #fff;
