--- a/src/routes/About/About.module.scss
+++ b/src/routes/About/About.module.scss
@@ -8,3 +8,41 @@
  * @since 17-Nov-2024
 */
 
+.container {
+
+  .title {
+    margin-bottom: 4rem;
+    text-align: center;
+    width: 100%;
+  }
+
+  .update {
+    font-size: 2rem;
+    text-align: center;
+    width: 100%;
+  }
+
+  .release {
+    font-size: 1.6rem;
+    margin-bottom: 4rem;
+    text-align: center;
+    opacity: .8;
+    width: 100%;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    gap: 2.4rem;
+    max-width: 76.8rem;
+    width: 100%;
+  }
+
+  .paragraph {
+    font-size: 2.4rem;
+
+    a {
+      font-size: 2.4rem;
+    }
+  }
+}
