--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -23,7 +23,8 @@ h6 {
 }
 
 p {
-  font-size: 1.6rem;
+  font-size: 2.4rem;
+  line-height: 3.6rem;
   letter-spacing: .1rem;
 }
 
@@ -31,4 +32,17 @@ a {
   font-size: 1.6rem;
   text-decoration: none;
   letter-spacing: .1rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
+  &::selection {
+    background: $selected-color;
+  }
 }
