update global state

--- a/generators/component/templates/component.jsx.hbs
+++ b/generators/component/templates/component.jsx.hbs
@@ -18,4 +18,6 @@ const {{properCase componentName}} = () => {
 
 {{properCase componentName}}.propTypes = { };
 
+{{properCase componentName}}.defaultProps = { };
+
 export default {{properCase componentName}};
