--- a/src/components/ActionsBar/ActionsBar.module.scss
+++ b/src/components/ActionsBar/ActionsBar.module.scss
@@ -29,7 +29,7 @@
     width: 100%;
   }
 
-  .action {
+  button {
     background: transparent;
     border: 0;
     height: 4rem;
@@ -42,10 +42,10 @@
       cursor: pointer;
       opacity: 1;
     }
-  }
 
-  .icon {
-    height: 2rem;
-    width: 2rem;
+    img {
+      height: 2rem;
+      width: 2rem;
+    }
   }
 }
