--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -24,15 +24,18 @@
 
   .title {
     font-weight: 700;
-    line-height: 3.2rem;
-    margin-bottom: .8rem;
+    line-height: 3.6rem;
+    margin-bottom: 1.2rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
   }
 
-  .description {
-    margin-bottom: .8rem;
+  .tag {
+    font-size: 1.6rem;
+    line-height: 2rem;
+    font-weight: 700;
+    margin-bottom: 1.2rem;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -41,6 +44,7 @@
   .date {
     color: $black;
     font-size: 1.6rem;
+    line-height: 2rem;
     font-weight: 500;
   }
 
