--- a/src/components/Note/Note.module.scss
+++ b/src/components/Note/Note.module.scss
@@ -42,7 +42,6 @@
   }
 
   .date {
-    color: $black;
     font-size: 1.6rem;
     line-height: 2rem;
     font-weight: 500;
@@ -56,11 +55,10 @@
   .action {
     background: transparent;
     border: 0;
-    height: 4rem;
+    display: flex;
     opacity: .5;
     padding: 1rem;
     transition: all .3s ease-in-out;
-    width: 4rem;
 
     &:hover {
       cursor: pointer;
@@ -68,9 +66,8 @@
     }
   }
 
-  .icon {
-    height: 2rem;
-    width: 2rem;
+  svg {
+    stroke: var(--secondary);
   }
 
   &.onClick {
