--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,30 +1,64 @@
-// For global classes, won't be hashed
+@import './themes';
+@import './fonts';
 
+// Clean up
 *,
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: $font-family;
   margin: 0;
   padding: 0;
 }
 
+// Initialize
 html {
   box-sizing: border-box;
 
   // This defines what is 1rem
   font-size: 62.5%; // 1 rem = 10px; 10px/16px = 62.5%
-
-  @include respond(tab-land) {
-    font-size: 58%; // 1 rem = 8px, 8/16 = 50%
-  }
-
-  @include respond(tab-land) {
-    font-size: 56.5%; // 1 rem = 8px, 8/16 = 50%
-  }
 }
 
+// Themes
+html[data-theme='LIGHT'] {
+  @include theme-light;
+}
+
+html[data-theme='DARK'] {
+  @include theme-dark;
+}
+
+html[data-theme='MONOKAI'] {
+  @include theme-monokai;
+}
+
+html[data-theme='NEON'] {
+  @include theme-neon;
+}
+
+html[data-theme='FLORA'] {
+  @include theme-flora;
+}
+
+html[data-theme='NIGHT'] {
+  @include theme-night;
+}
+
+// Font
+html[data-font='SERIF'] {
+  @include font-serif;
+}
+
+html[data-font='SANS_SERIF'] {
+  @include font-sans-serif;
+}
+
+html[data-font='SLAB'] {
+  @include font-slab;
+}
+
+// Global styles
 body {
+  background-color: var(--primary);
   flex: 1 0 auto;
   font-size: 1.8rem;
   height: 100%;
@@ -36,6 +70,10 @@ body {
 
   b {
     font-weight: 600;
+  }
+
+  * {
+    font-family: var(--font-family);
   }
 }
 
