--- a/src/components/InputField/InputField.module.scss
+++ b/src/components/InputField/InputField.module.scss
@@ -9,9 +9,11 @@
 */
 
 .field {
+  background-color: transparent;
   border: 0;
   box-shadow: none;
-  font-size: 3.2rem;
+  color: var(--secondary);
+  font-weight: 700;
   resize: none;
   outline: 0;
   overflow: hidden;
@@ -19,8 +21,10 @@
   width: 100%;
 
   &.isTitle {
-    font-weight: 700;
+    font-size: 3.2rem;
   }
 
-  // &.isContent {}
+  &.isTag {
+    font-size: 2.4rem;
+  }
 }
