--- a/src/components/ModalSettings/ModalSettings.module.scss
+++ b/src/components/ModalSettings/ModalSettings.module.scss
@@ -10,8 +10,7 @@
 
 .wrapper {
   align-items: center;
-  background-color: rgba(0, 0, 0, .5);
-  backdrop-filter: invert(80%);
+  background-color: rgba(0, 0, 0, .7);
   bottom: 0;
   display: flex;
   justify-content: center;
@@ -26,63 +25,68 @@
     display: flex;
     background-color: #fff;
     flex-direction: column;
-    // height: 100%;
     position: relative;
-    max-width: 52rem;
+    max-width: 76.8rem;
     min-height: 32rem;
     width: 100%;
+
+    @include respond(tab-port) {
+      max-width: 100%;
+      height: 100%;
+    }
   }
 
-  .modalHeader {
-    padding: 16px;
-    border-bottom: 1px solid #e0e0e0;
+  .header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    padding: 3.2rem;
 
-    .modalTitle {
+    .title {
+      color: #181818;
       margin: 0;
       font-size: 20px;
     }
   }
 
-  .modalBody {
-    padding: 16px;
+  .body {
+    padding: 0 3.2rem 3.2rem 3.2rem;
     flex: 1;
   }
 
   .section {
-    margin-bottom: 24px;
+    margin-bottom: 3.2rem;
 
     .title {
+      color: #181818;
       font-size: 2.4rem;
-      margin-bottom: 2.4rem;
+      line-height: 2.6rem;
+      margin-bottom: .8rem;
     }
 
-    .subtitle {
+    .description {
+      color: #181818;
       font-size: 1.6rem;
       line-height: 2.4rem;
-      margin-bottom: 2.4rem;
+      margin-bottom: 1.6rem;
     }
   }
 
-  .sectionTitle {
-    font-size: 16px;
-    margin-bottom: 8px;
-  }
-
-  .fontTiles {
+  .fontsList {
+    color: #181818;
     display: flex;
     flex-wrap: wrap;
-    gap: 1.6rem;
+    gap: 2.4rem;
   }
 
   .fontTile {
     align-items: center;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: .2rem solid #ccc;
+    background-color: #fff;
     cursor: pointer;
     display: flex;
     flex-direction: column;
-    font-size: 4.8rem;
-    justify-content: center;
+    justify-content: space-between;
     min-width: 12rem;
     padding: .8rem;
 
@@ -91,67 +95,76 @@
     }
 
     &.selected {
-      background-color: #181818;
-      border: 1px solid #181818;
-      color: white;
+      border: .2rem solid #181818;
     }
 
-    .fontName {
+    .example {
+      font-size: 4.8rem;
+    }
+
+    .name {
+      color: #181818;
       font-size: 1.6rem;
+      font-weight: 500;
       line-height: 1.8rem;
+      text-align: center;
     }
   }
 
   .themesList {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1.6rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2.4rem;
+
+    .tile {
+      align-items: center;
+      display: flex;
+      gap: 1.6rem;
+
+      @include respond(tab-port) {
+        flex-direction: column;
+      }
+    }
 
     .theme {
+      border: 0;
       height: 6rem;
-      width: 6rem;
+      position: relative;
+      width: 16rem;
+
+      &:hover {
+        cursor: pointer;
+      }
 
       &.selected {
-        background-color: #181818;
-        border: 1px solid #181818;
-        color: white;
+        border: .2rem solid #181818;
+      }
+    }
+
+    .name {
+      color: #181818;
+      font-size: 2rem;
+    }
+
+    .triangle {
+      position: absolute;
+      height: 100%;
+      top: 0;
+      width: 100%;
+
+      &.topLeft {
+        clip-path: polygon(0 0, 100% 0, 0 100%);
+      }
+
+      &.bottomRight {
+        clip-path: polygon(100% 100%, 100% 0, 0 100%);
       }
     }
   }
 
-  .modalFooter {
-    padding: 16px;
-    border-top: 1px solid #e0e0e0;
-    display: flex;
-    justify-content: flex-end;
-    gap: 2.4rem;
-  }
-
-  .button {
-    border: none;
-    cursor: pointer;
-    font-size: 2rem;
-    font-weight: 600;
-    letter-spacing: .2rem;
-    padding: .8rem 1.6rem;
-
-    &.cancel {
-      background-color: transparent;
-    }
-
-    &.save {
-      background-color: transparent;
-      border: .2rem solid #000;
-    }
-  }
-
-  .closeButton {
-    position: absolute;
-    top: 8px;
-    right: 8px;
+  .close {
     background: transparent;
     border: none;
-    font-size: 24px;
     cursor: pointer;
   }
 }
