--- a/src/components/Textarea/Textarea.module.scss
+++ b/src/components/Textarea/Textarea.module.scss
@@ -9,18 +9,16 @@
 */
 
 .field {
+  background-color: transparent;
   border: 0;
   box-shadow: none;
-  font-size: 3.2rem;
-  resize: none;
+  color: var(--secondary);
+  font-size: 2.4rem;
+  line-height: 3.6rem;
+  height: 36rem;
   outline: 0;
   overflow: hidden;
   overflow-wrap: break-word;
+  resize: none;
   width: 100%;
-
-  &.isTitle {
-    font-weight: 700;
-  }
-
-  // &.isContent {}
 }
