--- a/src/routes/Home/Home.module.scss
+++ b/src/routes/Home/Home.module.scss
@@ -10,18 +10,16 @@
 
 
 .container {
+  position: relative;
 
   .header {
-    margin-bottom: 6rem;
-  }
-
-  .header {
-    font-size: 4.8rem;
+    font-size: 6.8rem;
     margin: 0 0 4rem;
+    position: relative;
   }
 
   .newNote {
-    border-bottom: .1rem solid rgba($black, .2);
+    border-bottom: .1rem solid rgba(var(--seconday), .2);
     margin-bottom: 4rem;
     padding-bottom: 4rem;
   }
@@ -40,6 +38,31 @@
     }
   }
 
+  .title {
+    position: relative;
+    z-index: 3;
+  }
+
+  .subtitle {
+    position: relative;
+    z-index: 3;
+  }
+
+  .kanji {
+    font-size: 24rem;
+    left: 0;
+    line-height: 26rem;
+    position: absolute;
+    opacity: .1;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    white-space: pre-wrap;
+    width: 24rem;
+    word-break: break-all;
+    z-index: 1;
+  }
+
   &.noNotes {
     align-items: center;
     justify-content: center;
@@ -55,6 +78,7 @@
 
     .title {
       font-size: 5.6rem;
+      z-index: 2;
     }
 
     .subtitle {
