--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,34 +1,42 @@
 h1 {
+  color: var(--secondary);
   font-size: 4rem;
 }
 
 h2 {
+  color: var(--secondary);
   font-size: 3.6rem;
 }
 
 h3 {
+  color: var(--secondary);
   font-size: 3.2rem;
 }
 
 h4 {
+  color: var(--secondary);
   font-size: 2.8rem;
 }
 
 h5 {
+  color: var(--secondary);
   font-size: 2.4rem;
 }
 
 h6 {
+  color: var(--secondary);
   font-size: 2rem;
 }
 
 p {
+  color: var(--secondary);
   font-size: 2.4rem;
   line-height: 3.6rem;
   letter-spacing: .1rem;
 }
 
 a {
+  color: var(--secondary);
   font-size: 1.6rem;
   text-decoration: none;
   letter-spacing: .1rem;
@@ -43,6 +51,6 @@ h6,
 p,
 a {
   &::selection {
-    background: $selected-color;
+    background: var(--drag-background);
   }
 }
