--- a/src/components/ModalSettings/ModalSettings.module.scss
+++ b/src/components/ModalSettings/ModalSettings.module.scss
@@ -26,13 +26,12 @@
     background-color: #fff;
     flex-direction: column;
     position: relative;
-    max-width: 76.8rem;
+    max-width: 52rem;
     min-height: 32rem;
     width: 100%;
 
     @include respond(tab-port) {
       max-width: 100%;
-      height: 100%;
     }
   }
 
@@ -88,14 +87,17 @@
     flex-direction: column;
     justify-content: space-between;
     min-width: 12rem;
+    opacity: .6;
     padding: .8rem;
+    transition: all .3s ease-in-out;
 
     &:hover {
       background-color: #f0f0f0;
+      opacity: 1;
     }
 
     &.selected {
-      border: .2rem solid #181818;
+      opacity: 1;
     }
 
     .example {
@@ -129,21 +131,28 @@
     .theme {
       border: 0;
       height: 6rem;
+      opacity: .6;
       position: relative;
-      width: 16rem;
+      transition: all .3s ease-in-out;
+      width: 6rem;
 
       &:hover {
         cursor: pointer;
+        opacity: 1;
       }
 
       &.selected {
-        border: .2rem solid #181818;
+        opacity: 1;
+      }
+
+      @include respond(tab-port) {
+        width: 100%;
       }
     }
 
     .name {
       color: #181818;
-      font-size: 2rem;
+      font-size: 1.6rem;
     }
 
     .triangle {
