--- a/src/components/PageTemplate/PageTemplate.module.scss
+++ b/src/components/PageTemplate/PageTemplate.module.scss
@@ -24,7 +24,7 @@
     padding: 12rem 6rem 6rem;
 
     @include respond(tab-land) {
-      padding: 10rem 2.4rem;
+      padding: 10rem 2.4rem 4rem;
     }
   }
 
